--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --detectOpenHandles",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && rsync -av --delete build/ dadh22@ssh.student.bth.se:www/editor"
+    "deploy": "npm run build && rsync -av --delete build/ glpa22@ssh.student.bth.se:www/editor",
+    "clean": "rm -rf node_modules package-lock.json",
+    "serve": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
