--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --require mocha-suppress-logs --exit --recursive --timeout 10000",
     "start": "node app.js",
     "eslint": "eslint .",
+    "clean": "rm -rf node_modules package-lock.json",
     "watch": "nodemon app.js"
   },
   "keywords": [],
